--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       - ./.env
     networks:
       - rails
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
 
 networks:
   rails:
